<resources>
    <string name="app_name">Trinity Wallet</string>
    <string name="tab_transfer">Transfer</string>
    <string name="tab_setup_channel">Set Up Channel</string>
    <string name="tab_channel">Channel</string>
    <string name="tab_bill">Bill</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="card_text">WALLET INFO\n%1$s</string>
    <string name="title_icon">TitleIcon</string>
    <string name="card_icon">cardIcon</string>
    <string name="transfer">TRANSFER</string>
    <string name="setup_channel">SET UP CHANNEL</string>
    <string name="bill">BILL</string>
    <string name="payment_code_address_input_label">Payment Code/Receiver\'s Address</string>
    <string name="tnap">TNAP</string>
    <string name="deposit">Deposit</string>
    <string name="assets">Assets</string>
    <string name="tnc">TNC</string>
    <string name="neo">NEO</string>
    <string name="gas">GAS</string>
    <string name="alias">Alias</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="btn_pay">Pay</string>
    <string name="btn_setup_channel">Set Up Channel</string>
    <string name="btn_channel_close">btnChannelClose</string>
    <string name="title_activity_sign_in">Sign in</string>

    <string name="btn_sign_in">SIGN IN</string>
    <string name="error_invalid_private_key">Invalid private key.</string>
    <string name="main_menu_account">Account</string>
    <string name="main_menu_scan">Scan</string>
    <string name="main_menu_switch_net">Switch Net</string>
    <string name="main_menu_main_net">Main Net</string>
    <string name="main_menu_test_net">Test Net</string>
    <string name="btn_sign_out">SIGN OUT</string>
    <string name="private_key">Private Key</string>
    <string name="amount">Amount</string>
    <string name="passwordOnRAM">Password (8 ~ 16 bits, half width)</string>
    <string name="verify">Verify</string>
    <string name="password_again">Password again</string>
    <string name="confirm">Confirm</string>
    <string name="change_app_password">Change App Password</string>
    <string name="user_verify_logo">userVerifyLogo</string>
    <string name="bill_price">Price: %1$s %2$s</string>
    <string name="bill_fee">Fee: %1$s %2$s</string>
    <string name="channel_deposit">Deposit: %1$s %2$s</string>
    <string name="channel_balance">Balance: %1$s %2$s</string>
    <string name="channel_state">State: %1$s</string>
    <string name="net_state">%1$s NET</string>
    <string name="btn_receive">Receive</string>
    <string name="set_up_channel_first">No known channel, please set up first.</string>
    <string name="no_channel_bill_yet">No channel bill yet.</string>
    <string name="qr_code">QRCode</string>
    <string name="no_balance">-</string>
    <string name="chain">CHAIN</string>
    <string name="channel">CHANNEL</string>
    <string name="default_channel_alias">_DEFAULT_CHANNEL_ALIAS_</string>
</resources>
