<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tabSetupChannel"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleSetupChannel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/setup_channel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layTNAP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleSetupChannel">

        <EditText
            android:id="@+id/inputTNAP"
            style="@android:style/Widget.Holo.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tnap"
            android:inputType="textNoSuggestions"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layDeposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layTNAP">

        <EditText
            android:id="@+id/inputDeposit"
            style="@android:style/Widget.Holo.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deposit"
            android:inputType="numberDecimal"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/labelAssets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:text="@string/assets"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layDeposit" />

    <RadioGroup
        android:id="@+id/inputAssets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:checkedButton="@id/rdoItmTNC"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/labelAssets"
        app:layout_constraintLeft_toRightOf="@id/labelAssets"
        app:layout_constraintTop_toTopOf="@id/labelAssets">

        <RadioButton
            android:id="@+id/rdoItmTNC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tnc"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdoItmNEO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/neo"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/rdoItmGAS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/gas"
            android:textSize="14sp" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layAlias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelAssets">

        <EditText
            android:id="@+id/inputAlias"
            style="@android:style/Widget.Holo.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alias"
            android:inputType="textNoSuggestions"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSetupChannel"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_setup_channel"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layAlias" />
</android.support.constraint.ConstraintLayout>