<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userVerify"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:gravity="top|center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/user_verify_logo"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/titleUserVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:text="IDENTITY VERIFICATION"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/infoUserVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="Please input your password for identity verify. (It is NOT your private key.)"
        android:textAlignment="viewStart"
        android:textSize="12sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layUserVerify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="24dp">

        <EditText
            android:id="@+id/inputUserVerify"
            style="@android:style/Widget.Holo.Light.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordOnRAM"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layUserVerifySure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="gone">

        <EditText
            android:id="@+id/inputUserVerifySure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="24"
            android:hint="@string/password_again"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnUserVerify"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:focusable="true"
        android:text="@string/verify"
        android:textStyle="bold" />
</LinearLayout>