<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardFragment"
    android:layout_width="match_parent"
    android:layout_height="128dp"
    tools:context=".activity.MainActivity$PlaceholderFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/shape_corner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/cardIcon"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/card_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/card_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/cardIcon"
            app:layout_constraintLeft_toRightOf="@id/cardIcon"
            app:layout_constraintTop_toTopOf="@id/cardIcon" />

        <ImageView
            android:id="@+id/cardQRAddress"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/card_icon"
            app:layout_constraintBottom_toBottomOf="@+id/cardIcon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardIcon" />

        <TextView
            android:id="@+id/cardAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/please_sign_in"
            android:textAlignment="center"
            android:textIsSelectable="true"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardIcon" />

        <View
            android:id="@+id/addressLine"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#CCCCCC"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/cardAddress" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cardColorFooter"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_corner_down_tnc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressLine">

            <TextView
                android:id="@+id/cardChainBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/no_balance"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/cardColorFooterMiddleLine"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/chain"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/cardChainBalance"
                app:layout_constraintRight_toRightOf="@+id/cardChainBalance"
                app:layout_constraintTop_toBottomOf="@+id/cardChainBalance"
                tools:ignore="SmallSp" />

            <View
                android:id="@+id/cardColorFooterMiddleLine"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#CCCCCC"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardChannelBalance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/no_balance"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textIsSelectable="true"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/cardColorFooterMiddleLine"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/channel"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="8sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/cardChannelBalance"
                app:layout_constraintRight_toRightOf="@+id/cardChannelBalance"
                app:layout_constraintTop_toBottomOf="@+id/cardChannelBalance"
                tools:ignore="SmallSp" />
        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>